<resources>
    <string name="app_name">Network Blocker</string>
    <string name="channel_description">Vpn Status</string>

    <string name="starting">Vpn Starting</string>
    <string name="started">Vpn Started</string>
    <string name="stopping">Vpn Stopping</string>
    <string name="stopped">Vpn Stopped</string>
    <string name="reloading">Vpn Reloading</string>

    <string name="menu_search">Search application</string>
    <string name="menu_network_setting">Network settings</string>
    <string name="menu_application_setting">Application settings</string>
    <string name="menu_refresh">Refresh applications list</string>

    <string name="enable_disable_uninstall">Enable/Disable app uninstall</string>
    <string name="enable_disable_always_on_vpn">Enable/Disable always-on VPN(it may required device restart)</string>
    <string name="disable_battery_optimization">Disable Battery optimization for NetBlocker</string>
    <string name="enable_admin_permission">Enable admin permission</string>
    <string name="device_admin_message">We need to be device admin:)</string>
    <string name="disabling_permission_unavailable">disabling permission is not possible in android</string>

    <string name="permission_granted">permission granted</string>
    <string name="permission_not_granted">permission not granted</string>
    <string name="setting">Setting</string>
    <string name="create_profile">Create profile</string>
    <string name="lock_phone">Lock phone</string>
    <string name="mac_address">Mac address</string>
    <string name="profile_not_created">Profile Not Created!</string>
    <string name="profile_name">Work profile</string>

    <string name="all_done">Setup all done</string>
    <string name="all_done_explanation">To manage the configuration in your managed profile, visit the badged version of this application.</string>
    <string name="icon">Icon</string>


    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="secret">Shared Secret:</string>
    <string name="connect">Connect!</string>
    <string name="select_app">Select app</string>
    <string name="configure_pptp">Configure PPTP</string>
    <string name="disconnect">Disconnect!</string>
    <string name="proxy_host">HTTP proxy hostname</string>
    <string name="proxy_port">HTTP proxy port</string>
    <string name="vpn_type">Vpn Type</string>
    <string name="vpn_info">Vpn Info</string>
    <string name="local">local</string>
    <string name="backend">back</string>
    <string name="pptp">pptp</string>
    <string name="open_vpn">open</string>
    <string name="ip_hint">127.0.0.1</string>
    <string name="port_hint">8080</string>
    <string name="secret_hint">asdasd</string>

    <string name="app_list_header_msg">Select preferred application to block/unblock network connection</string>

    <string name="packages">Packages (comma separated):</string>
    <string name="allowed">Allow</string>
    <string name="disallowed">Disallow</string>

    <string name="connecting">NetBlocker is connecting…</string>
    <string name="connected">NetBlocker is connected!</string>
    <string name="disconnected">NetBlocker is disconnected!</string>
    <string name="incomplete_proxy_settings">
        Incomplete proxy settings. For HTTP proxy we require both hostname and port settings.
    </string>
    <string name="unknown_package_names">
        Some of the specified package names do not correspond to any installed packages.
    </string>

    <string name="connection_close_confirm">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>


    <string name="home_vpn_title">Vpn Option</string>
    <string name="home_app_usage_title">App Usage Time</string>
    <string name="home_app_usage_network_title">App Usage Network</string>
    <string name="foreground_service_title">Foreground Service</string>
    <string name="foreground_service_description">always on foreground service</string>
    <string name="home_vpn_description">determine which app can access to internet and which can not</string>
    <string name="home_app_usage_description">view application lunch time</string>
    <string name="home_app_usage_network_description">view application network usage</string>

    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string name="app_usage_permission_not_allow">The user may not allow the access to apps usage.</string>

    <string name="app_usage_permission">Permission</string>
    <string name="refresh">Refresh</string>

    <string name="app_usage_permission_status">AppUsage permission status:</string>
    <string name="permission_status">Permission Status</string>

    <string name="battery_optimization_permission">Battery Optimization Permission</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>